--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,20 @@ wget>=3.2
 omegaconf>=2.3
 scipy>=1.10
 
+# Gradio UI
+gradio>=4.0.0
+
 # Audio Enhancement
 noisereduce>=2.0  # Optional but highly recommended for better noise reduction
 torchaudio>=0.12.0  # Required for Highpass/Lowpass filters
 soundfile>=0.12.1  # Required for audio I/O (avoids torchcodec dependency)
-scipy>=1.10  # Required for audio filtering fallback
+
+# Speech Recognition (FunASR for SenseVoice)
+funasr>=1.0.0
+
+# LLM Analysis
+langchain==0.3.15
+langchain-ollama==0.2.0
 
 # NVIDIA NeMo (ASR / diarization)
 # nemo_toolkit is not available on PyPI with full functionality and usually
@@ -41,6 +50,3 @@ scipy>=1.10  # Required for audio filtering fallback
 
 # Optional / dev
 ipython>=8.15
-
-langchain==0.3.15
-langchain-ollama==0.2.0
