--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ langchain-ollama>=0.1.0
 # Audio File I/O
 soundfile>=0.12.0
 
+# Database
+pymongo>=4.0.0
+
 # Note: This script also imports from local modules:
 # - diarization.py
 # - audio_chopper.py
