--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ funasr>=1.0.0
 
 # LLM Integration
 langchain-ollama>=0.1.0
+langchain-core>=0.1.0
+
+# Data Validation
+pydantic>=2.0.0
 
 # Audio File I/O
 soundfile>=0.12.0
